--- a/MyFace-react/my-face-react/src/css/index.scss
+++ b/MyFace-react/my-face-react/src/css/index.scss
@@ -45,9 +45,9 @@ code {
 }
 
 .line-wrap-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: start;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 400px);
 }
 
 .user-profile {
@@ -63,6 +63,9 @@ code {
     text-align: left;
     margin-top: 10px;
     max-width: 300px;
+    max-height: 2.5rem;
+    overflow: hidden;
+    /*background: linear-gradient(rgba(255, 255, 255, 0) 70%, rgb(255, 255, 255) 100%);*/
 }
 
 .align-centre {
